# generadores

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ScenarioWavRecordPanel.ui  check.dtd  docker_script.bat  docker_script.sh  input.xml  run.sh  traces.cfg
Generadores/: .gitignore  CMakeLists.txt.user.38f66bc  CMakeLists.txt.user.438fd70  traces.cfg
Generadores/build-Generadores-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
Generadores/build-Generadores-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-9971056447cd596401b7.json  cmakeFiles-v1-edb52ac52c3926b27ee7.json  codemodel-v2-11f50afc57c2f41f27c8.json  directory-.-Debug-3fbfada5279cce0823dc.json  directory-lib.log-saes.example-Debug-e2745149aab4fa746d67.json  index-2024-07-25T21-44-34-0358.json  target-codeGenerator-Debug-73d272203866eec4ac12.json  target-codeGenerator_autogen-Debug-52046af35d04153e56dd.json  target-logs-Debug-45bd552da8e80f321509.json  target-logs_autogen-Debug-2036d9a97ab08df63f95.json  target-test_debug-Debug-f835c03ef9c42f2f6706.json  target-test_debug_autogen-Debug-77389d94894d4a7d35e4.json  target-test_release-Debug-36e4b2195c3424df4c24.json  target-test_release_autogen-Debug-ac600837c4f4aea7da19.json
Generadores/build-Generadores-Desktop-Debug/.qt/: QtDeploySupport.cmake
Generadores/build-Generadores-Desktop-Debug/lib/: Makefile  cmake_install.cmake
Generadores/build-Generadores-Desktop-Debug/lib/log-saes/: Makefile  cmake_install.cmake
Generadores/build-Generadores-Desktop-Debug/lib/log-saes/example/: Makefile  cmake_install.cmake
Generadores/build-Generadores-Desktop-Debug/lib/log-saes/src/: Makefile  cmake_install.cmake
Generadores/build-Generadores-Desktop-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
Generadores/build-Generadores-Desktop-Release/.cmake/api/v1/reply/: cache-v2-422565754f2f7c78daf2.json  cmakeFiles-v1-8328a624363ec336b7a7.json  codemodel-v2-72a0804cc61abbc84a57.json  directory-lib.log-saes-Release-5879615ef2c2c02637f6.json  (+11 more)
Generadores/build-Generadores-Desktop-Release/.qt/: QtDeploySupport.cmake
Generadores/build-Generadores-Desktop-Release/lib/: Makefile  cmake_install.cmake
Generadores/build-Generadores-Desktop-Release/lib/log-saes/: Makefile  cmake_install.cmake
Generadores/build-Generadores-Desktop-Release/lib/log-saes/example/: Makefile  cmake_install.cmake
Generadores/build-Generadores-Desktop-Release/lib/log-saes/src/: Makefile  cmake_install.cmake
Generadores/lib/: CMakeLists.txt
Generadores/lib/log-saes/example/: CMakeLists.txt
Generadores/lib/log-saes/src/: CMakeLists.txt  logs.hpp
Generadores/src/: main.cpp
Generadores/src/controller/: controller.cpp  controller.h  guicontroller.cpp  guicontroller.h
Generadores/src/gui/: GeneratorPanel.ui  GeneratorPanelImpl.cpp  GeneratorPanelImpl.h  HeaderConfigPanel.cpp  HeaderConfigPanel.h
Generadores/src/model/: gbutton.h  generador.cpp  gpanel.cpp  gpanel.h  panelcollection.cpp  panelcollection.h  saesheader.cpp  saesheader.h
Generadores/src/xml/: xmlattribute.cpp  xmlattribute.h  xmlelement.cpp  xmlelement.h  xmlexception.h  xmlfile.cpp  xmlfile.h  xmlparser.cpp
Generadores/templates/: Documentation.txt  Doxyfile.template  QtCbHeader.template
lib/log-saes/: .gitignore  CMakeLists.txt  README.md
lib/log-saes/example/: test_log.cpp  traces.cfg
lib/log-saes/src/: logs.cpp
sample/: index.xml
sample/panel1/: CMakeLists.txt
sample/panel1/docs/html/: annotated.html  classes.html  classpanel1Gw-members.html  classpanel1Gw.html  classpanel1Gw__coll__graph.map  classpanel1Gw__coll__graph.md5  classpanel1QtCb-members.html  classpanel1QtCb.html  classpanel1QtCb_1_1PrivateData-members.html  classpanel1QtCb_1_1PrivateData.html  classpanel1QtCb__coll__graph.map  classpanel1QtCb__coll__graph.md5  classpanel1QtCb__inherit__graph.map  classpanel1QtCb__inherit__graph.md5  dir_b56c0ad4912ac1b6369cd787fc220c80.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_type.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  menudata.js  panel1Gw_8cpp.html  panel1Gw_8cpp__incl.map  panel1Gw_8cpp__incl.md5  panel1Gw_8h.html  panel1Gw_8h__dep__incl.map  panel1Gw_8h__dep__incl.md5  panel1Gw_8h__incl.map  panel1Gw_8h__incl.md5  panel1Gw_8h_source.html  panel1QtCb_8cpp.html  panel1QtCb_8cpp__incl.map  panel1QtCb_8cpp__incl.md5  (+10 more)
sample/panel1/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  typedefs_0.js  variables_0.js
sample/panel1/src_inc/: panel1.h  panel1.ui  panel1Gw.cpp  panel1Gw.h  panel1QtCb.cpp  panel1QtCb.h
sample/panel1/tests/: test_panel1.cpp
sample/testingPanel/: CMakeLists.txt
sample/testingPanel/src_inc/: testingPanel.h  testingPanel.ui  testingPanelGw.cpp  testingPanelGw.h  testingPanelQtCb.cpp  testingPanelQtCb.h
src/: controller.cpp  controller.h  generador.cpp  generador.h  input.xml  main.cpp  panel.cpp  panel.h  traces.cfg  xmlparser.cpp  xmlparser.h
src/controller/: controller.cpp  controller.h  guicontroller.cpp  guicontroller.h
src/gui/: GeneratorPanel.ui  GeneratorPanelImpl.cpp  GeneratorPanelImpl.h  HeaderConfigPanel.cpp  HeaderConfigPanel.h  HeaderConfigPanel.ui  MainPanel.cpp  MainPanel.h  MainPanel.ui
src/log/: logger.cpp  logger.h
src/model/: button.cpp  button.h  gbutton.cpp  gbutton.h  generador.cpp  generador.h  gpanel.cpp  gpanel.h  panel.cpp  panel.h  panelbuilder.cpp  panelbuilder.h  panelcollection.cpp  panelcollection.h  saesheader.cpp  templatefunctions.cpp  templatefunctions.h
src/xml/: xmlattribute.cpp  xmlattribute.h  xmlelement.cpp  xmlelement.h  xmlfile.cpp  xmlfile.h  xmlparser.cpp  xmlparser.h  xmltests.cpp
templates/: CMakeLists  CMakeLists.template  Documentation.txt  Functions.template  Functions.txt  Gw.template  GwHeader.template  Header.template  QtCb.template  QtCbHeader.template  Testfile.template  Ui.template  doc_en  doc_es  foo
